--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 certifi==2017.4.17
 chardet==3.0.4
-docutils==0.13.1
 future==0.16.0
 idna==2.5
+python-telegram-bot==6.1.0
 requests==2.18.1
 urllib3==1.21.1
-
